Closed
Bug 109280
Opened 24 years ago
Closed 22 years ago
[FIXr]onFocus and onBlur do work within fieldset only after resizing the window
Categories
(Core :: Layout: Form Controls, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: diethelms, Assigned: bzbarsky)
References
()
Details
Attachments
(1 file)
1.54 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/4.0 (compatible; MSIE 5.01; Windows NT 5.0)
BuildID: 2001110209
within fieldsets there is no reaction visible using onFocus and onBlur, only if
you resize the window there is effort.
without fieldset onFocus and onBlur do function without problems.
Reproducible: Always
Steps to Reproduce:
1.Try http://selfhtml.teamone.de/javascript/sprache/anzeige/onfocus.htm
2.Try http://selfhtml.teamone.de/javascript/sprache/anzeige/onblur.htm
3.Try
http://selfhtml.teamone.de/javascript/objekte/anzeige/htmlelemente_legend.htm
4. Try the last one resizing the window
![]() |
||
Comment 1•24 years ago
|
||
Confirmed. -> Form Controls, but maybe DOM HTML.
Assignee: asa → rods
Component: Browser-General → HTML Form Controls
QA Contact: doronr → madhur
![]() |
||
Updated•24 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
![]() |
||
Updated•24 years ago
|
Priority: -- → P1
Target Milestone: mozilla1.0.1 → Future
![]() |
||
Updated•23 years ago
|
QA Contact: madhur → tpreston
![]() |
||
Comment 3•23 years ago
|
||
-> default owner. This is still a bug. May be focus; CC'ing saari in case it is.
Assignee: rods → form
Status: ASSIGNED → NEW
Priority: P1 → P3
![]() |
Assignee | |
Comment 4•22 years ago
|
||
This has nothing to do with focus and everything to do with the fact that the
legend frame's align attribute change triggers no reflow.
![]() |
Assignee | |
Comment 5•22 years ago
|
||
There still seems to be a painting issue here, but at least the reflow
happens...
![]() |
Assignee | |
Updated•22 years ago
|
Attachment #135525 -
Flags: superreview?(dbaron)
Attachment #135525 -
Flags: review?(dbaron)
Where's the code that maps align to layout without going through style?
Attachment #135525 -
Flags: superreview?(dbaron)
Attachment #135525 -
Flags: superreview+
Attachment #135525 -
Flags: review?(dbaron)
Attachment #135525 -
Flags: review+
...but it might be nice to map align to style at some point instead of having
nsLegendFrame::GetAlign.
Assignee: core.layout.form-controls → bz-vacation
Summary: onFocus and onBlur do work within fieldset only after resizing the window → [FIXr]onFocus and onBlur do work within fieldset only after resizing the window
![]() |
Assignee | |
Comment 8•22 years ago
|
||
Doh. I forgot to cc myself. We'd basically need another internal style
property a la the table ones to map this into style, right? Mapping align on a
legend into float would be pretty wrong, I think.
Priority: P3 → P2
Target Milestone: Future → mozilla1.7alpha
What does it do? Maybe it maps to auto margins?
![]() |
Assignee | |
Comment 10•22 years ago
|
||
Hmm... yeah, that may work. I'd really like to move away from the
special-purpose frames for legend and fieldset, btw... I just haven't figured
out a good way to map our current behavior into CSS so far (in particular, the
fact that the legend's width can affect the fieldset width).
![]() |
Assignee | |
Comment 11•22 years ago
|
||
Bug 230154 filed on the style mapping issue.
Bug 230155 filed for the painting problem.
Patch checked in for 1.7a.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 12•22 years ago
|
||
just a short warning chris k. was here, aka the relationship between legend and
fieldsets are very similiar to captions and tables and the outer table frame.
![]() |
Assignee | |
Comment 13•22 years ago
|
||
You mean changing align on a legend should really reflow the fieldset
completely? As written, that may indeed be the case.. :(
You need to log in
before you can comment on or make changes to this bug.
Description
•