Make changes to "align" attribute of <legend> trigger reflow.  Bug 109280, r+sr=dbaron